add browserify and install dependencies.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 		<h1>Title</h1>
 		<p>Page content</p>
 	</div>
+	<div id="app">
+		<h2>{{ message }}</h2>
+	</div>
 	<footer class="main-footer">
 		<p>page footer</p>
 	</footer>
+	<script src="js/build.js"></script>
 </body>
 </html>
